--- a/05-1_louispoulse/index.html
+++ b/05-1_louispoulse/index.html
@@ -17,8 +17,8 @@
 
 <body>
     <div class="wrap">
-        <!-- mv -->
-        <div class="mv">
+        <!-- main_v -->
+        <section class="main_v">
             <nav class="gnb">
                 <ul>
                     <li>
@@ -72,7 +72,7 @@
             </nav>
             <div class="m_right">
                 <header>
-                    <div class="top">
+                    <div class="top container">
                         <h1><img src="./img/logo.png" alt=""></h1>
                         <div class="right">
                             <ul>
@@ -90,13 +90,152 @@
                     </div>
                 </header>
                 <div class="main_visual">
-                    <div class="main_bg"></div>
-                    <div class="vedio">
-                        <video src="./img/main_visual_video.mp4" autoplay loop></video>
+                    <!-- <div class="main_bg"></div> -->
+                    <div class="inner">
+                        <div class="des">
+                            <span>Poul Henningsen</span>
+                            <h2>Design to Shape Light</h2>
+                            <p>루이스폴센은 그저 램프를 디자인하는 데 그치지 않고 <br />빛을 형상화하여 사람들에게 좋은 느낌을 전달해줄 수 있는 <br />실내외 분위기를 만들고자
+                                노력합니다.</p>
+                        </div>
+                        <video src="./img/main_visual_video.mp4" autoplay loop>
+                            <div class="line"></div>
+                        </video>
                     </div>
                 </div>
             </div>
-        </div>
+        </section>
+        <section class="categories">
+            <div class="container">
+                <div class="itm">
+                    <a href="">
+                        <figure><img src="./img/categories_01.png" alt=""></figure>
+                    </a>
+                    <p>Pendant</p>
+                </div>
+                <div class="itm">
+                    <a href="">
+                        <figure><img src="./img/categories_02.png" alt=""></figure>
+                    </a>
+                    <p>Floor Lamp</p>
+                </div>
+                <div class="itm">
+                    <a href="">
+                        <figure><img src="./img/categories_03.png" alt=""></figure>
+                    </a>
+                    <p>Table Lamp</p>
+                </div>
+                <div class="itm">
+                    <a href="">
+                        <figure><img src="./img/categories_04.png" alt=""></figure>
+                    </a>
+                    <p>Wall Lamp</p>
+                </div>
+                <div class="itm">
+                    <a href="">
+                        <figure><img src="./img/categories_05.png" alt=""></figure>
+                    </a>
+                    <p>Outdoor Lamp</p>
+                </div>
+            </div>
+        </section>
+        <!-- show -->
+        <section class="show">
+            <div class="container">
+                <div class="box top">
+                    <div class="thumb">
+                        <figure>
+                            <img src="./img/show_03.jpg" alt="">
+                        </figure>
+                    </div>
+                    <div class="content">
+                        <div class="txt">
+                            <h2>WALL LAMP<br /><span>COLLECTION</span></h2>
+                            <a href="">View All Items</a>
+                        </div>
+                        <div class="itm_slide">
+                            <figure>
+                                <img src="./img/show_itm_01.jpg" alt="">
+                                <p>PH 2/1 월</p>
+                                <strong>130,000</strong>
+                                <a href="">ADD CART</a>
+                            </figure>
+                            <figure>
+                                <img src="./img/show_itm_02.jpg" alt="">
+                                <p>NJP 월</p>
+                                <strong>95,000</strong>
+                                <a href="">ADD CART</a>
+                            </figure>
+                            <figure>
+                                <img src="./img/show_itm_03.jpg" alt="">
+                                <p>VL Studio Wall</p>
+                                <strong>110,000</strong>
+                                <a href="">ADD CART</a>
+                            </figure>
+                            <figure>
+                                <img src="./img/show_itm_04.jpg" alt="">
+                                <p>LP 그랜드 월</p>
+                                <strong>130,000</strong>
+                                <a href="">ADD CART</a>
+                            </figure>
+                            <figure>
+                                <img src="./img/show_itm_05.jpg" alt="">
+                                <p>플린트 월</p>
+                                <strong>125,000</strong>
+                                <a href="">ADD CART</a>
+                            </figure>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="box bt">
+                    <div class="content">
+                        <div class="txt">
+                            <h2>PANDANT<br /><span>COLLECTION</span></h2>
+                            <a href="">View All Items</a>
+                        </div>
+                        <div class="itm_slide">
+                            <figure>
+                                <img src="./img/show_itm_01.jpg" alt="">
+                                <p>PH 2/1 월</p>
+                                <strong>130,000</strong>
+                                <a href="">ADD CART</a>
+                            </figure>
+                            <figure>
+                                <img src="./img/show_itm_02.jpg" alt="">
+                                <p>NJP 월</p>
+                                <strong>95,000</strong>
+                                <a href="">ADD CART</a>
+                            </figure>
+                            <figure>
+                                <img src="./img/show_itm_03.jpg" alt="">
+                                <p>VL Studio Wall</p>
+                                <strong>110,000</strong>
+                                <a href="">ADD CART</a>
+                            </figure>
+                            <figure>
+                                <img src="./img/show_itm_04.jpg" alt="">
+                                <p>LP 그랜드 월</p>
+                                <strong>130,000</strong>
+                                <a href="">ADD CART</a>
+                            </figure>
+                            <figure>
+                                <img src="./img/show_itm_05.jpg" alt="">
+                                <p>플린트 월</p>
+                                <strong>125,000</strong>
+                                <a href="">ADD CART</a>
+                            </figure>
+                        </div>
+                    </div>
+                    <div class="thumb">
+                        <figure>
+                            <img src="./img/show_04.jpg" alt="">
+                        </figure>
+                    </div>
+
+                </div>
+            </div>
+        </section>
 
         <main>
 
