--- a/05-1_louispoulse/index.html
+++ b/05-1_louispoulse/index.html
@@ -84,7 +84,7 @@
 
                             <input type="text" placeholder="Search&nbsp;Here">
                             <button>
-                                <a href=""><i class="xi-search"></i></a>
+                                <a href="#!"><i class="xi-search"></i></a>
                             </button>
                         </div>
                     </div>
@@ -108,13 +108,13 @@
         <section class="categories">
             <div class="container">
                 <div class="itm">
-                    <a href="">
+                    <a href="#!">
                         <figure><img src="./img/categories_01.png" alt=""></figure>
                     </a>
                     <p>Pendant</p>
                 </div>
                 <div class="itm">
-                    <a href="">
+                    <a href="#!">
                         <figure><img src="./img/categories_02.png" alt=""></figure>
                     </a>
                     <p>Floor Lamp</p>
@@ -126,63 +126,70 @@
                     <p>Table Lamp</p>
                 </div>
                 <div class="itm">
-                    <a href="">
+                    <a href="#!">
                         <figure><img src="./img/categories_04.png" alt=""></figure>
                     </a>
                     <p>Wall Lamp</p>
                 </div>
                 <div class="itm">
-                    <a href="">
+                    <a href="#!">
                         <figure><img src="./img/categories_05.png" alt=""></figure>
                     </a>
                     <p>Outdoor Lamp</p>
                 </div>
             </div>
         </section>
-        <!-- show -->
-        <section class="show">
+
+        <!-- col -->
+        <section class="col">
             <div class="container">
                 <div class="box top">
                     <div class="thumb">
                         <figure>
-                            <img src="./img/show_03.jpg" alt="">
+                            <img src="./img/col_03.jpg" alt="">
                         </figure>
                     </div>
                     <div class="content">
                         <div class="txt">
                             <h2>WALL LAMP<br /><span>COLLECTION</span></h2>
-                            <a href="">View All Items</a>
+                            <a href="#!">View All Items</a>
                         </div>
+
+                        <div class="col_arrows t_a">
+                            <a href="#!"><i class="xi-angle-left-thin"></i></a>
+                            <a href="#!"><i class="xi-angle-right-thin"></i></a>
+                        </div>
+
                         <div class="itm_slide">
                             <figure>
-                                <img src="./img/show_itm_01.jpg" alt="">
+                                <img src="./img/col_itm_01.jpg" alt="">
                                 <p>PH 2/1 월</p>
                                 <strong>130,000</strong>
-                                <a href="">ADD CART</a>
+                                <a href="#!">ADD CART</a>
                             </figure>
                             <figure>
-                                <img src="./img/show_itm_02.jpg" alt="">
+                                <img src="./img/col_itm_02.jpg" alt="">
                                 <p>NJP 월</p>
                                 <strong>95,000</strong>
-                                <a href="">ADD CART</a>
+                                <a href="#!">ADD CART</a>
                             </figure>
                             <figure>
-                                <img src="./img/show_itm_03.jpg" alt="">
+                                <img src="./img/col_itm_03.jpg" alt="">
                                 <p>VL Studio Wall</p>
                                 <strong>110,000</strong>
-                                <a href="">ADD CART</a>
+                                <a href="#!">ADD CART</a>
                             </figure>
                             <figure>
-                                <img src="./img/show_itm_04.jpg" alt="">
+                                <img src="./img/col_itm_04.jpg" alt="">
                                 <p>LP 그랜드 월</p>
                                 <strong>130,000</strong>
-                                <a href="">ADD CART</a>
+                                <a href="#!">ADD CART</a>
                             </figure>
                             <figure>
-                                <img src="./img/show_itm_05.jpg" alt="">
+                                <img src="./img/col_itm_05.jpg" alt="">
                                 <p>플린트 월</p>
                                 <strong>125,000</strong>
-                                <a href="">ADD CART</a>
+                                <a href="#!">ADD CART</a>
                             </figure>
                         </div>
                     </div>
@@ -192,44 +199,50 @@
                     <div class="content">
                         <div class="txt">
                             <h2>PANDANT<br /><span>COLLECTION</span></h2>
-                            <a href="">View All Items</a>
+                            <a href="#!">View All Items</a>
                         </div>
+
+                        <div class="col_arrows b_a">
+                            <a href="#!"><i class="xi-angle-left-thin"></i></a>
+                            <a href="#!"><i class="xi-angle-right-thin"></i></a>
+                        </div>
+
                         <div class="itm_slide">
                             <figure>
-                                <img src="./img/show_itm_01.jpg" alt="">
+                                <img src="./img/col_itm_01.jpg" alt="">
                                 <p>PH 2/1 월</p>
                                 <strong>130,000</strong>
-                                <a href="">ADD CART</a>
+                                <a href="#!">ADD CART</a>
                             </figure>
                             <figure>
-                                <img src="./img/show_itm_02.jpg" alt="">
+                                <img src="./img/col_itm_02.jpg" alt="">
                                 <p>NJP 월</p>
                                 <strong>95,000</strong>
-                                <a href="">ADD CART</a>
+                                <a href="#!">ADD CART</a>
                             </figure>
                             <figure>
-                                <img src="./img/show_itm_03.jpg" alt="">
+                                <img src="./img/col_itm_03.jpg" alt="">
                                 <p>VL Studio Wall</p>
                                 <strong>110,000</strong>
-                                <a href="">ADD CART</a>
+                                <a href="#!">ADD CART</a>
                             </figure>
                             <figure>
-                                <img src="./img/show_itm_04.jpg" alt="">
+                                <img src="./img/col_itm_04.jpg" alt="">
                                 <p>LP 그랜드 월</p>
                                 <strong>130,000</strong>
-                                <a href="">ADD CART</a>
+                                <a href="#!">ADD CART</a>
                             </figure>
                             <figure>
-                                <img src="./img/show_itm_05.jpg" alt="">
+                                <img src="./img/col_itm_05.jpg" alt="">
                                 <p>플린트 월</p>
                                 <strong>125,000</strong>
-                                <a href="">ADD CART</a>
+                                <a href="#!">ADD CART</a>
                             </figure>
                         </div>
                     </div>
                     <div class="thumb">
                         <figure>
-                            <img src="./img/show_04.jpg" alt="">
+                            <img src="./img/col_04.jpg" alt="">
                         </figure>
                     </div>
 
