--- a/05-1_louispoulse/index.html
+++ b/05-1_louispoulse/index.html
@@ -150,54 +150,56 @@
                         </figure>
                     </div>
                     <div class="content">
-                        <div class="txt">
+                        <div class="tit">
                             <h2>WALL LAMP<br /><span>COLLECTION</span></h2>
                             <a href="#!">View All Items</a>
                         </div>
-
-                        <div class="col_arrows t_a">
-                            <a href="#!"><i class="xi-angle-left-thin"></i></a>
-                            <a href="#!"><i class="xi-angle-right-thin"></i></a>
+                        <div class="best">
+                            <h3>BEST PICK</h3>
+                            <div class="itm_slide">
+                                <figure>
+                                    <img src="./img/col_itm_01.jpg" alt="">
+                                    <p>PH 2/1 월</p>
+                                    <strong>130,000</strong>
+                                    <a href="#!">ADD CART</a>
+                                </figure>
+                                <figure>
+                                    <img src="./img/col_itm_02.jpg" alt="">
+                                    <p>NJP 월</p>
+                                    <strong>95,000</strong>
+                                    <a href="#!">ADD CART</a>
+                                </figure>
+                                <figure>
+                                    <img src="./img/col_itm_03.jpg" alt="">
+                                    <p>VL Studio Wall</p>
+                                    <strong>110,000</strong>
+                                    <a href="#!">ADD CART</a>
+                                </figure>
+                                <figure>
+                                    <img src="./img/col_itm_04.jpg" alt="">
+                                    <p>LP 그랜드 월</p>
+                                    <strong>130,000</strong>
+                                    <a href="#!">ADD CART</a>
+                                </figure>
+                                <figure>
+                                    <img src="./img/col_itm_05.jpg" alt="">
+                                    <p>플린트 월</p>
+                                    <strong>125,000</strong>
+                                    <a href="#!">ADD CART</a>
+                                </figure>
+                            </div>
+                            <div class="col_arrows t_a">
+                                <a href="#!"><i class="xi-angle-left-thin"></i></a>
+                                <a href="#!"><i class="xi-angle-right-thin"></i></a>
+                            </div>
                         </div>
 
-                        <div class="itm_slide">
-                            <figure>
-                                <img src="./img/col_itm_01.jpg" alt="">
-                                <p>PH 2/1 월</p>
-                                <strong>130,000</strong>
-                                <a href="#!">ADD CART</a>
-                            </figure>
-                            <figure>
-                                <img src="./img/col_itm_02.jpg" alt="">
-                                <p>NJP 월</p>
-                                <strong>95,000</strong>
-                                <a href="#!">ADD CART</a>
-                            </figure>
-                            <figure>
-                                <img src="./img/col_itm_03.jpg" alt="">
-                                <p>VL Studio Wall</p>
-                                <strong>110,000</strong>
-                                <a href="#!">ADD CART</a>
-                            </figure>
-                            <figure>
-                                <img src="./img/col_itm_04.jpg" alt="">
-                                <p>LP 그랜드 월</p>
-                                <strong>130,000</strong>
-                                <a href="#!">ADD CART</a>
-                            </figure>
-                            <figure>
-                                <img src="./img/col_itm_05.jpg" alt="">
-                                <p>플린트 월</p>
-                                <strong>125,000</strong>
-                                <a href="#!">ADD CART</a>
-                            </figure>
-                        </div>
                     </div>
                 </div>
 
                 <div class="box bt">
                     <div class="content">
-                        <div class="txt">
+                        <div class="tit">
                             <h2>PANDANT<br /><span>COLLECTION</span></h2>
                             <a href="#!">View All Items</a>
                         </div>
