--- a/05-1_louispoulse/index.html
+++ b/05-1_louispoulse/index.html
@@ -105,6 +105,7 @@
                 </div>
             </div>
         </section>
+        <!-- categories -->
         <section class="categories">
             <div class="container">
                 <div class="itm">
@@ -139,7 +140,6 @@
                 </div>
             </div>
         </section>
-
         <!-- col -->
         <section class="col">
             <div class="container">
@@ -158,34 +158,34 @@
                             <h3>BEST PICK</h3>
                             <div class="itm_slide">
                                 <figure>
-                                    <img src="./img/col_itm_01.jpg" alt="">
+                                    <a href="#!"><img src="./img/col_itm_01.jpg" alt=""></a>
                                     <p>PH 2/1 월</p>
                                     <strong>130,000</strong>
-                                    <a href="#!">ADD CART</a>
+                                    <a href="#!" class="to_cart">ADD CART</a>
                                 </figure>
                                 <figure>
-                                    <img src="./img/col_itm_02.jpg" alt="">
+                                    <a href="#!"><img src="./img/col_itm_02.jpg" alt=""></a>
                                     <p>NJP 월</p>
                                     <strong>95,000</strong>
-                                    <a href="#!">ADD CART</a>
+                                    <a href="#!" class="to_cart">ADD CART</a>
                                 </figure>
                                 <figure>
-                                    <img src="./img/col_itm_03.jpg" alt="">
+                                    <a href="#!"><img src="./img/col_itm_03.jpg" alt=""></a>
                                     <p>VL Studio Wall</p>
                                     <strong>110,000</strong>
-                                    <a href="#!">ADD CART</a>
+                                    <a href="#!" class="to_cart">ADD CART</a>
                                 </figure>
                                 <figure>
-                                    <img src="./img/col_itm_04.jpg" alt="">
+                                    <a href="#!"><img src="./img/col_itm_04.jpg" alt=""></a>
                                     <p>LP 그랜드 월</p>
                                     <strong>130,000</strong>
-                                    <a href="#!">ADD CART</a>
+                                    <a href="#!" class="to_cart">ADD CART</a>
                                 </figure>
                                 <figure>
-                                    <img src="./img/col_itm_05.jpg" alt="">
+                                    <a href="#!"><img src="./img/col_itm_05.jpg" alt=""></a>
                                     <p>플린트 월</p>
                                     <strong>125,000</strong>
-                                    <a href="#!">ADD CART</a>
+                                    <a href="#!" class="to_cart">ADD CART</a>
                                 </figure>
                             </div>
                             <div class="col_arrows t_a">
@@ -193,7 +193,6 @@
                                 <a href="#!"><i class="xi-angle-right-thin"></i></a>
                             </div>
                         </div>
-
                     </div>
                 </div>
 
@@ -203,43 +202,44 @@
                             <h2>PANDANT<br /><span>COLLECTION</span></h2>
                             <a href="#!">View All Items</a>
                         </div>
-
-                        <div class="col_arrows b_a">
-                            <a href="#!"><i class="xi-angle-left-thin"></i></a>
-                            <a href="#!"><i class="xi-angle-right-thin"></i></a>
-                        </div>
-
-                        <div class="itm_slide">
-                            <figure>
-                                <img src="./img/col_itm_01.jpg" alt="">
-                                <p>PH 2/1 월</p>
-                                <strong>130,000</strong>
-                                <a href="#!">ADD CART</a>
-                            </figure>
-                            <figure>
-                                <img src="./img/col_itm_02.jpg" alt="">
-                                <p>NJP 월</p>
-                                <strong>95,000</strong>
-                                <a href="#!">ADD CART</a>
-                            </figure>
-                            <figure>
-                                <img src="./img/col_itm_03.jpg" alt="">
-                                <p>VL Studio Wall</p>
-                                <strong>110,000</strong>
-                                <a href="#!">ADD CART</a>
-                            </figure>
-                            <figure>
-                                <img src="./img/col_itm_04.jpg" alt="">
-                                <p>LP 그랜드 월</p>
-                                <strong>130,000</strong>
-                                <a href="#!">ADD CART</a>
-                            </figure>
-                            <figure>
-                                <img src="./img/col_itm_05.jpg" alt="">
-                                <p>플린트 월</p>
-                                <strong>125,000</strong>
-                                <a href="#!">ADD CART</a>
-                            </figure>
+                        <div class="best">
+                            <h3>BEST PICK</h3>
+                            <div class="itm_slide">
+                                <figure>
+                                    <a href="#!"><img src="./img/col_itm_01.jpg" alt=""></a>
+                                    <p>PH 2/1 월</p>
+                                    <strong>130,000</strong>
+                                    <a href="#!" class="to_cart">ADD CART</a>
+                                </figure>
+                                <figure>
+                                    <a href="#!"><img src="./img/col_itm_02.jpg" alt=""></a>
+                                    <p>NJP 월</p>
+                                    <strong>95,000</strong>
+                                    <a href="#!" class="to_cart">ADD CART</a>
+                                </figure>
+                                <figure>
+                                    <a href="#!"><img src="./img/col_itm_03.jpg" alt=""></a>
+                                    <p>VL Studio Wall</p>
+                                    <strong>110,000</strong>
+                                    <a href="#!" class="to_cart">ADD CART</a>
+                                </figure>
+                                <figure>
+                                    <a href="#!"><img src="./img/col_itm_04.jpg" alt=""></a>
+                                    <p>LP 그랜드 월</p>
+                                    <strong>130,000</strong>
+                                    <a href="#!" class="to_cart">ADD CART</a>
+                                </figure>
+                                <figure>
+                                    <a href="#!"><img src="./img/col_itm_05.jpg" alt=""></a>
+                                    <p>플린트 월</p>
+                                    <strong>125,000</strong>
+                                    <a href="#!" class="to_cart">ADD CART</a>
+                                </figure>
+                            </div>
+                            <div class="col_arrows b_a">
+                                <a href="#!"><i class="xi-angle-left-thin"></i></a>
+                                <a href="#!"><i class="xi-angle-right-thin"></i></a>
+                            </div>
                         </div>
                     </div>
                     <div class="thumb">
@@ -247,7 +247,49 @@
                             <img src="./img/col_04.jpg" alt="">
                         </figure>
                     </div>
-
+                </div>
+            </div>
+        </section>
+        <!-- best -->
+        <section class="best">
+            <div class="container">
+                <h2>BEST PRODUCT</h2>
+                <div class="b_slider">
+                    <figure>
+                        <a href="#!"><img src="./img/best_01_1.png" alt=""></a>
+                        <h3>이니그마 425</h3>
+                        <a href="#!">VIEW MORE</a>
+                    </figure>
+                    <figure>
+                        <a href="#!"><img src="./img/best_02_1.png" alt=""></a>
+                        <h3>이니그마 425</h3>
+                        <a href="#!">VIEW MORE</a>
+                    </figure>
+                    <figure>
+                        <a href="#!"><img src="./img/best_03_1.png" alt=""></a>
+                        <h3>이니그마 425</h3>
+                        <a href="#!">VIEW MORE</a>
+                    </figure>
+                    <figure>
+                        <a href="#!"><img src="./img/best_04_1.png" alt=""></a>
+                        <h3>이니그마 425</h3>
+                        <a href="#!">VIEW MORE</a>
+                    </figure>
+                    <figure>
+                        <a href="#!"><img src="./img/best_05_1.png" alt=""></a>
+                        <h3>이니그마 425</h3>
+                        <a href="#!">VIEW MORE</a>
+                    </figure>
+                    <figure>
+                        <a href="#!"><img src="./img/best_06_1.png" alt=""></a>
+                        <h3>이니그마 425</h3>
+                        <a href="#!">VIEW MORE</a>
+                    </figure>
+                    <figure>
+                        <a href="#!"><img src="./img/best_07_1.png" alt=""></a>
+                        <h3>이니그마 425</h3>
+                        <a href="#!">VIEW MORE</a>
+                    </figure>
                 </div>
             </div>
         </section>
