--- a/05-1_louispoulse/index.html
+++ b/05-1_louispoulse/index.html
@@ -188,10 +188,8 @@
                                     <a href="#!" class="to_cart">ADD CART</a>
                                 </figure>
                             </div>
-                            <div class="col_arrows t_a">
-                                <a href="#!"><i class="xi-angle-left-thin"></i></a>
-                                <a href="#!"><i class="xi-angle-right-thin"></i></a>
-                            </div>
+                            <a href="#!"><i class="xi-angle-left-thin col_arrow a_L"></i></a>
+                            <a href="#!"><i class="xi-angle-right-thin col_arrow a_R"></i></a>
                         </div>
                     </div>
                 </div>
@@ -236,10 +234,8 @@
                                     <a href="#!" class="to_cart">ADD CART</a>
                                 </figure>
                             </div>
-                            <div class="col_arrows b_a">
-                                <a href="#!"><i class="xi-angle-left-thin"></i></a>
-                                <a href="#!"><i class="xi-angle-right-thin"></i></a>
-                            </div>
+                            <a href="#!"><i class="xi-angle-left-thin col_arrow a_L"></i></a>
+                            <a href="#!"><i class="xi-angle-right-thin col_arrow a_R"></i></a>
                         </div>
                     </div>
                     <div class="thumb">
