--- a/05-1_louispoulse/index.html
+++ b/05-1_louispoulse/index.html
@@ -94,7 +94,7 @@
                     <div class="inner">
                         <div class="des">
                             <span>Poul Henningsen</span>
-                            <h2>Design to Shape Light</h2>
+                            <h2 class="HSF">Design to Shape Light</h2>
                             <p>루이스폴센은 그저 램프를 디자인하는 데 그치지 않고 <br />빛을 형상화하여 사람들에게 좋은 느낌을 전달해줄 수 있는 <br />실내외 분위기를 만들고자
                                 노력합니다.</p>
                         </div>
@@ -140,6 +140,91 @@
                 </div>
             </div>
         </section>
+        <!-- best -->
+        <section class="best">
+            <div class="left">
+                <div class="t_bg">
+                    <div class="txt">
+                        <h2>BEST</h2>
+                        <h2>SELLER</h2>
+                        <a href="#!">VIEW ALL</a>
+                    </div>
+                </div>
+            </div>
+            <div class="b_slider">
+                <div class="itm">
+                    <div class="i_bg">
+                        <figure><img src="./img/best_01_2.png" alt=""></figure>                        
+                    </div>
+                    <div class="des">
+                        <h3>PH 3/3 황동 오팔 유리 펜던트</h3>
+                        <strong>광원 1x60W E27</strong>
+                        <div class="color">
+                            <span class="c_01"></span>
+                            <span class="c_02"></span>
+                        </div>
+                        <a href="#!">VIEW MORE</a>
+                    </div>
+                </div>
+                <div class="itm">
+                    <div class="i_bg">
+                        <figure><img src="./img/best_02_2.png" alt=""></figure>
+                    </div>
+                    <div class="des">
+                        <h3>PH 3/3 황동 오팔 유리 펜던트</h3>
+                        <strong>광원 1x60W E27</strong>
+                        <div class="color">
+                            <span class="c_01"></span>
+                            <span class="c_02"></span>
+                        </div>
+                        <a href="#!">VIEW MORE</a>
+                    </div>
+                </div>
+                <div class="itm">
+                    <div class="i_bg">
+                        <figure><img src="./img/best_03_2.png" alt=""></figure>
+                    </div>
+                    <div class="des">
+                        <h3>PH 3/3 황동 오팔 유리 펜던트</h3>
+                        <strong>광원 1x60W E27</strong>
+                        <div class="color">
+                            <span class="c_01"></span>
+                            <span class="c_02"></span>
+                        </div>
+                        <a href="#!">VIEW MORE</a>
+                    </div>
+                </div>
+                <div class="itm">
+                    <div class="i_bg">
+                        <figure><img src="./img/best_04_2.png" alt=""></figure>
+                    </div>
+                    <div class="des">
+                        <h3>PH 3/3 황동 오팔 유리 펜던트</h3>
+                        <strong>광원 1x60W E27</strong>
+                        <div class="color">
+                            <span class="c_01"></span>
+                            <span class="c_02"></span>
+                        </div>
+                        <a href="#!">VIEW MORE</a>
+                    </div>
+                </div>
+                <div class="itm">
+                    <div class="i_bg">
+                        <figure><img src="./img/best_05_2.png" alt=""></figure>
+                    </div>
+                    <div class="des">
+                        <h3>PH 3/3 황동 오팔 유리 펜던트</h3>
+                        <strong>광원 1x60W E27</strong>
+                        <div class="color">
+                            <span class="c_01"></span>
+                            <span class="c_02"></span>
+                        </div>
+                        <a href="#!">VIEW MORE</a>
+                    </div>
+                </div>
+            </div>
+
+        </section>
         <!-- col -->
         <section class="col">
             <div class="container">
@@ -151,11 +236,11 @@
                     </div>
                     <div class="content">
                         <div class="tit">
-                            <h2>WALL LAMP<br /><span>COLLECTION</span></h2>
-                            <a href="#!">View All Items</a>
+                            <h2 class="HSF">WALL LAMP<br /><span class="HSF">COLLECTION</span></h2>
+                            <a href="#!" class="HSF">View All Items</a>
                         </div>
                         <div class="best">
-                            <h3>BEST PICK</h3>
+                            <h3 class="HSF">BEST PICK</h3>
                             <div class="itm_slide">
                                 <figure>
                                     <a href="#!"><img src="./img/col_itm_01.jpg" alt=""></a>
@@ -197,11 +282,11 @@
                 <div class="box bt">
                     <div class="content">
                         <div class="tit">
-                            <h2>PANDANT<br /><span>COLLECTION</span></h2>
-                            <a href="#!">View All Items</a>
+                            <h2 class="HSF">PANDANT<br /><span class="HSF">COLLECTION</span></h2>
+                            <a href="#!" class="HSF">View All Items</a>
                         </div>
                         <div class="best">
-                            <h3>BEST PICK</h3>
+                            <h3 class="HSF">BEST PICK</h3>
                             <div class="itm_slide">
                                 <figure>
                                     <a href="#!"><img src="./img/col_itm_01.jpg" alt=""></a>
@@ -246,49 +331,7 @@
                 </div>
             </div>
         </section>
-        <!-- best -->
-        <section class="best">
-            <div class="container">
-                <h2>BEST PRODUCT</h2>
-                <div class="b_slider">
-                    <figure>
-                        <a href="#!"><img src="./img/best_01_1.png" alt=""></a>
-                        <h3>이니그마 425</h3>
-                        <a href="#!">VIEW MORE</a>
-                    </figure>
-                    <figure>
-                        <a href="#!"><img src="./img/best_02_1.png" alt=""></a>
-                        <h3>이니그마 425</h3>
-                        <a href="#!">VIEW MORE</a>
-                    </figure>
-                    <figure>
-                        <a href="#!"><img src="./img/best_03_1.png" alt=""></a>
-                        <h3>이니그마 425</h3>
-                        <a href="#!">VIEW MORE</a>
-                    </figure>
-                    <figure>
-                        <a href="#!"><img src="./img/best_04_1.png" alt=""></a>
-                        <h3>이니그마 425</h3>
-                        <a href="#!">VIEW MORE</a>
-                    </figure>
-                    <figure>
-                        <a href="#!"><img src="./img/best_05_1.png" alt=""></a>
-                        <h3>이니그마 425</h3>
-                        <a href="#!">VIEW MORE</a>
-                    </figure>
-                    <figure>
-                        <a href="#!"><img src="./img/best_06_1.png" alt=""></a>
-                        <h3>이니그마 425</h3>
-                        <a href="#!">VIEW MORE</a>
-                    </figure>
-                    <figure>
-                        <a href="#!"><img src="./img/best_07_1.png" alt=""></a>
-                        <h3>이니그마 425</h3>
-                        <a href="#!">VIEW MORE</a>
-                    </figure>
-                </div>
-            </div>
-        </section>
+
 
         <main>
 
